--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,13 +81,14 @@
         <activity android:name=".ui.activities.signups.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.activities.MainActivity"
-            android:label="@string/title_activity_main" />
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity android:name=".ui.activities.signups.InviteContactActivity"></activity>
 
         <meta-data
@@ -106,16 +107,9 @@
 
         <activity
             android:name=".ui.activities.HelpActivity"
-            android:label="@string/title_activity_help" />
-        <activity
-            android:name=".ui.activities.ProfileActivity"
-            android:label="@string/title_activity_profile"
-            android:parentActivityName=".ui.activities.MainActivity" />
-        <activity
-            android:name=".ui.activities.SwipeActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:label="@string/title_activity_help" />
+
         <activity
             android:name=".ui.activities.client.ClientActivity"
             android:label="@string/app_name"
@@ -127,12 +121,6 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".ui.activities.client.SelectClientActivity"
@@ -140,7 +128,7 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".ui.activities.schedule.CreateApointmentActivity"
+            android:name=".ui.activities.schedule.CreateAppointmentActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
