--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,15 +62,15 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
         transitive = true;
     }
-    compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile files('libs/org-apache-commons-lang.jar')
+    compile 'com.google.android.gms:play-services-gcm:9.0.2'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'me.relex:circleindicator:1.2.1@aar'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
-    compile 'com.google.android.gms:play-services-auth:8.4.0'
-    compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile 'com.google.android.gms:play-services-maps:8.4.0'
+    compile 'com.google.android.gms:play-services-auth:9.0.2'
+    compile 'com.google.android.gms:play-services-location:9.0.2'
+    compile 'com.google.android.gms:play-services-maps:9.0.2'
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
     compile 'com.dubsmash.volley:library:2.0.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
