--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,15 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+
+        <activity
+                android:name=".ui.activities.GeneralSelectObjectActivity"
+                android:label="@string/app_name"
+                android:windowSoftInputMode="adjustResize"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
         <activity
             android:name=".ui.activities.client.SelectClientActivity"
             android:label="@string/app_name"
