--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,16 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_api_key"/>
+        <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version" />
+
+        <!-- <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/map_api_key" /> -->
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -67,6 +77,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+                android:name=".ui.activities.client.ActivityClient"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.signups.WalkThroughActivity"
             android:label="@string/app_name"
@@ -95,9 +110,6 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.activities.signups.InviteContactActivity" />
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/map_api_key" />
 
         <receiver android:name=".receivers.SMSBroadcastReceiver">
             <intent-filter>
