--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -231,6 +231,9 @@
         <activity android:name=".ui.activities.coworker.ViewCoWorkerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".ui.activities.SelectPicture"
+            android:screenOrientation="portrait"
+            android:theme="@style/DialogTheme"/>
     </application>
 
 </manifest>
