--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -194,7 +194,13 @@
                 android:value="com.tied.android.tiedapp.ui.activities.MainActivity" />
         </activity>
         <activity
-            android:name=".ui.activities.sales.ActivitySalesDetails"
+            android:name=".ui.activities.sales.ActivitySalesClientDetails"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".ui.activities.sales.ActivitySalesClientSaleDetails"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
