--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -184,6 +184,11 @@
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar" />
         <activity
+                android:name=".ui.activities.territories.ActivityTerritories"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar" />
+        <activity
                 android:name=".ui.activities.lines.AddLinesActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
