--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,11 +104,6 @@
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".ui.activities.lines.LineRevenueActivity"
-                android:label="@string/app_name"
-                android:screenOrientation="portrait"
-                android:theme="@style/AppTheme.NoActionBar" />
-        <activity
                 android:name=".ui.activities.sales.ActivityAddSales"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
@@ -254,7 +249,7 @@
                 android:name=".ui.activities.client.ClientInfo"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.activities.LinesAndTerritories"
+        <activity android:name=".ui.activities.lines.LinesListActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".ui.activities.client.ClientMapAndListActivity"
