--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -224,7 +224,7 @@
                 android:theme="@style/AppTheme.NoActionBar"
                 android:windowSoftInputMode="adjustResize" />
         <activity
-                android:name=".ui.activities.schedule.ViewSchedule"
+                android:name=".ui.activities.schedule.ScheduleDetailsActivitiy"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar" />
@@ -234,7 +234,7 @@
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar" />
         <activity
-                android:name=".ui.activities.GeneralSelectObjectActivity"
+                android:name=".ui.activities.SelectClientActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar"
@@ -463,7 +463,9 @@
         <activity android:name=".ui.activities.client.ScheduleActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
+        <activity android:name=".ui.activities.SelectTerritoryActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity android:name=".ui.activities.SelectPicture"
                   android:screenOrientation="portrait"
